--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ defmt = "0.2.0"
 defmt-rtt = "0.2.0"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 # TODO(4) enter your HAL here
-# some-hal = "1.2.3"
+nrf52840-hal = "0.14.0"
 
 [features]
 # set logging levels here
