--- a/test-nrf52840/Cargo.toml
+++ b/test-nrf52840/Cargo.toml
@@ -1,5 +1,4 @@
 [package]
-# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
 authors = ["Finomnis <finomnis@gmail.com>"]
 name = "test-nrf52840"
 edition = "2018"
@@ -9,31 +8,16 @@ version = "0.1.0"
 members = ["testsuite"]
 
 [dependencies]
-cortex-m = "0.7.1"
-cortex-m-rt = "0.6.13"
-defmt = "0.2.0"
-defmt-rtt = "0.2.0"
-panic-probe = { version = "0.2.0", features = ["print-defmt"] }
-# TODO(4) enter your HAL here
+cortex-m = "0.7.3"
+cortex-m-rt = "0.7.0"
+defmt = "0.3.0"
+defmt-rtt = "0.3.0"
+panic-probe = { version = "0.3.0", features = ["print-defmt"] }
+# enter your HAL here
 nrf52840-hal = "0.14.0"
 # Application dependencies
 usb-device = "0.2.8"
 usbd-serial = "0.1.1"
-
-[features]
-# set logging levels here
-default = [
-  "defmt-default",
-  # "dependency-a/defmt-trace",
-]
-
-# do NOT modify these features
-defmt-default = []
-defmt-trace = []
-defmt-debug = []
-defmt-info = []
-defmt-warn = []
-defmt-error = []
 
 # cargo build/run
 [profile.dev]
