--- a/test-nrf52840/testsuite/Cargo.toml
+++ b/test-nrf52840/testsuite/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-# TODO(1) fix `authors` if you didn't use `cargo-generate`
+# fix `authors` if you didn't use `cargo-generate`
 authors = ["Finomnis <finomnis@gmail.com>"]
 name = "testsuite"
 publish = false
@@ -15,25 +15,9 @@ harness = false
 
 [dependencies]
 test-nrf52840 = { path = ".." }
-cortex-m = "0.7.1"
-cortex-m-rt = "0.6.12"
-defmt = "0.2.0"
-defmt-rtt = "0.2.0"
-defmt-test = "0.2.0"
-panic-probe = { version = "0.2.0", features = ["print-defmt"] }
-
-[features]
-# set logging levels here
-default = [
-  # in tests, enable all logs
-  "defmt-trace",
-  # "dependency-a/defmt-trace",
-]
-
-# do NOT modify these features
-defmt-default = []
-defmt-trace = []
-defmt-debug = []
-defmt-info = []
-defmt-warn = []
-defmt-error = []
+cortex-m = "0.7.3"
+cortex-m-rt = "0.7.0"
+defmt = "0.3.0"
+defmt-rtt = "0.3.0"
+defmt-test = "0.3.0"
+panic-probe = { version = "0.3.0", features = ["print-defmt"] }
